# crypto-intelligence-platform

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/app/: main.py
apps/api/app/ai/: prompt.py  providers.py
apps/api/app/alembic/: env.py
apps/api/app/alembic/versions/: 20260709_1200_001_initial_schema.py
apps/api/app/api/: deps.py  middleware.py
apps/api/app/api/v1/: ai.py  alerts.py  auth.py  health.py  wallets.py
apps/api/app/core/: config.py  errors.py  logging.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  ai_cache.py  alert.py  audit.py  provider_sync.py  token_holding.py  transaction.py  user.py  wallet.py  wallet_session.py
apps/api/app/providers/: base.py  etherscan.py  mock.py  registry.py
apps/api/app/schemas/: models.py
apps/api/app/security/: session.py  telegram.py
apps/api/app/services/: ai_explain.py  alerts.py  users.py  wallets.py
apps/api/app/utils/: addresses.py  http_retry.py  rate_limit.py  url_safety.py
apps/api/tests/: conftest.py  test_addresses.py  test_ai_prompt.py  test_alerts.py  test_api.py  test_http_retry.py  test_rate_limit.py  test_safe_transport.py  test_security_rate_limit.py  test_session_tokens.py  test_settings.py  test_telegram_auth.py  test_url_safety.py  test_worker_tasks.py
apps/bot/bot/: main.py  notifications.py
apps/web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/__tests__/: WalletForm.test.tsx  format.test.ts
apps/web/src/components/: AiExplanationPanel.tsx  WalletForm.tsx
apps/web/src/lib/: api.ts  format.ts  telegram.ts
apps/web/src/pages/: Alerts.tsx  Dashboard.tsx  Login.tsx  WalletDetail.tsx
apps/web/src/types/: api.ts
apps/worker/worker/: run_worker.py  tasks.py
infra/: Dockerfile.api  Dockerfile.bot  Dockerfile.web  Dockerfile.worker  nginx.conf
