[project]
name = "crypto-intelligence-platform"
version = "0.1.0"
description = "Read-only crypto wallet intelligence, monitoring and alerting platform with a Telegram Mini App."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Crypto Intelligence Platform contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "aiogram>=3.7",
  "taskiq>=0.11",
  "taskiq-redis>=1.0",
  "httpx>=0.27",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "anyio>=4.3",
  "eth-hash[pycryptodome]>=0.7",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "types-redis",
  "aiosqlite>=0.20",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*", "apps*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["apps/web", "node_modules", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort
  "B",        # bugbear
  "UP",       # pyupgrade
  "C4",       # comprehensions
  "SIM",      # simplify
  "N",        # pep8 naming
  "S",        # bandit
  "RUF",      # ruff specific
  "ASYNC",    # async safety
  "A",        # builtins shadowing
]
ignore = [
  "S101",     # assert in tests is fine
  "S104",     # binding to 0.0.0.0 in containers
  "S105",     # false positives on string literals that look like "password" names
  "S106",     # false positives on field names that contain "token" (token_symbol, token_type)
  "S110",     # try-except-pass for non-critical cleanup is acceptable
  "S311",     # we use `random` only for jitter backoff, not cryptographic purposes
  "S603",     # subprocess.run with shell=False is fine
  "S607",     # partial path on executable is fine in containers
  "B008",     # Depends() in defaults (FastAPI pattern)
  "N818",     # exception suffix naming
  "RUF001",   # ambiguous unicode in strings (we use mathematical operators intentionally)
  "RUF002",
  "RUF003",
  "RUF059",   # unpacked variable never used (we destructure for clarity)
  "SIM102",   # nested if collapse hurts readability
  "UP047",    # type parameters syntax requires Python 3.12+ strict mode; legacy syntax is fine
  "E402",     # module-level import not at top — needed for sys.path bootstrap in bot/worker entrypoints
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004", "SLF001"]
"alembic/**/*.py" = ["S", "E402"]
"apps/api/app/alembic/**/*.py" = ["S", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "packages/shared"
explicit_package_bases = true
exclude = ["apps/web/.*", "node_modules/.*", "build/.*", "dist/.*"]

[[tool.mypy.overrides]]
module = ["alembic.*", "alembic_env"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps/api/tests", "apps/worker/tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
  "integration: marks tests that require external infrastructure (skipped by default)",
]

[tool.coverage.run]
source = ["apps", "packages"]
omit = ["*/tests/*", "*/alembic/*"]
